# rust-schulcloud-api

./: Cargo.toml
src/: api.rs  errors.rs  lib.rs  state.rs
src/networking/: connection.rs  mod.rs
src/networking/data/: channel_info.rs  companies.rs  conversation_info.rs  messages.rs  mod.rs  private_key.rs  user.rs
src/request_types/: about.rs  chats.rs  login.rs  mod.rs
src/requests/: about.rs  chats.rs  login.rs  mod.rs
src/requests/blocking/: about.rs  chats.rs  login.rs  mod.rs
src/types/: mod.rs
src/types/chats/: channels.rs  conversations.rs  messages.rs  mod.rs
src/types/user/: companies.rs  general.rs  mod.rs  others.rs
