[package]
name = "schul-cloud-api"
version = "0.2.0"
edition = "2021"
authors = ["Schatten2020"]
description = "Library providing an interface to talk to the schul.cloud api"
repository = "https://github.com/Schatten2021/rust-schulcloud-api"
license = "Apache-2.0"


[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
openssl = {version = "0.10.68"}
base64 = "0.22.1"
hex = "0.4.3"
serde_json = "1.0.128"
rand = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }

[features]
experimental = []